--- a/style.css
+++ b/style.css
@@ -7,42 +7,45 @@
   font-family: "Poppins", sans-serif;
   padding: 0;
   margin: 0;
-  
 }
+
 body{
   background-color: #F8F8FA;
 }
+
 header
 {
-  height: 50px;
-
+  height: 100px;
+  display: flex;
+  margin-right: 50px;
+  margin-left: 50px;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  gap:20px;
 }
+
 header>nav
 {
-  float: right;
-  margin-right: 50px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
+
 header>nav>a
 {
-
   font-size: 15px;
   font-weight: 500;
-    color: #878787;
+  color: #878787;
   padding: 0px 10px;
 }
 
 header>nav>a:nth-child(1)
 {
-
  color: #2c2c2c;
  font-weight: 600;
 }
 
 .nav-item-active
 {
-  
-
   color: #08ACF5;
   padding: 3px 5px;
   border: 1px solid  #08ACF5;
@@ -51,16 +54,17 @@ header>nav>a:nth-child(1)
   font-weight: 500px;
   margin-right: 20px;
 }
+
+header>div:nth-child(2)
+{ 
+  flex:1;
+}
+
 header>div:nth-child(2)>img
 { 
-  margin-top: 30px;
-  margin-left: 50px;
   width: 83px;
   height: 30px;
-  } 
-
-
-
+} 
 
 /*END OF HEADER*/
 
@@ -69,7 +73,9 @@ header>div:nth-child(2)>img
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 100px;
+  margin-top: 75px;
+  margin-right: 50px;
+  margin-left: 50px;
 }
 
 .hostingcards1
@@ -78,7 +84,9 @@ header>div:nth-child(2)>img
   flex-direction: row-reverse;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 150px;
+  margin-top: 100px;
+  margin-right: 50px;
+  margin-left: 50px;
 }
 
 .leftsection
@@ -87,15 +95,15 @@ header>div:nth-child(2)>img
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin-left: 50px;
-
 }
+
 .leftsection>h2
 {
   color: black;
   font-size: 3.3em;
   width:fit-content;
 }
+
 .leftsection>p
 {
   color: #878787;
@@ -103,28 +111,30 @@ header>div:nth-child(2)>img
   margin-top: 20px;
   width:fit-content;
 }
+
 .leftsection>button
 {
   color:white;
   background-color: #08ACF5;
   border: 1px solid #08ACF5;
   border-radius: 5px;
- 
   margin-top: 30px;
   width:fit-content;
   padding: 15px 40px;
   font-size: 18px;
   font-weight: 500;
 }
+
 .rightsection
 {
   flex:1;
-  margin-right: 50px;
+  margin-top:15px;
   text-align: center;
 }
+
 .rightsection>img
 {
-  width: 525px;
+   width: 525px; 
 }
 
 .serviceprovider
@@ -132,15 +142,19 @@ header>div:nth-child(2)>img
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: center;
+  justify-content: left;
+  gap:20px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 50px;
 }
 .serviceprovider>h2{
-  flex: 1;
-  margin-left: 50px;
+  /* width:46%; */
+  
 }
 .serviceprovider>p{
-  flex: 1;
-  margin-right: 50px;
+  /* width:46%; */
+  
 }
 
 .serviceprovider_list
@@ -148,19 +162,20 @@ header>div:nth-child(2)>img
   display: flex;
   margin: 0px 50px;
   margin-top: 50px;
+  gap:25px;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 .serviceproviderbox
 {
   padding: 20px 20px;
   height: fit-content;
-  width:250px;
+  /* width:100%; */
   background-color: white;
   display: flex;
   flex-direction: column;
-
 }
 .serviceproviderbox>p
 {
@@ -169,9 +184,11 @@ header>div:nth-child(2)>img
   width: 90%;
   margin-top: 10px;
 }
+
 .serviceproviderbox>img
 {
   width: 40px;
+  height:35px;
   margin-bottom: 22px;
 }
 
@@ -195,8 +212,21 @@ header>div:nth-child(2)>img
 .packs
 {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  
+  margin-left: 50px;
+  margin-right: 50px;
+  gap: 25px;
+}
+.pack
+{
+  background-color: white;
+  width:24.5%;
+  height: fit-content;
+  padding: 30px;
+  border: 1px solid white;
+  border-radius: 10px;
+
 }
 .pack>div>p{
   font-size: 15px;
@@ -208,16 +238,7 @@ header>div:nth-child(2)>img
   font-size: 30px;
   color: black
 }
-.pack
-{
-  background-color: white;
-  width:275px;
-  height: fit-content;
-  padding: 30px;
-  border: 1px solid white;
-  border-radius: 10px;
-  margin-left: 20px;
-}
+
 .pack ul
 {
   list-style-type: none;
@@ -259,7 +280,6 @@ header>div:nth-child(2)>img
   background-color: transparent;
   border: 1px solid #08ACF5;
   border-radius: 5px;
- 
   width:fit-content;
   padding: 10px 30px;
   font-size: 15px;
@@ -282,7 +302,6 @@ header>div:nth-child(2)>img
   color: black;
   font-size: 18px;
 }
-
 
 .customer>h2
 {
@@ -310,9 +329,12 @@ header>div:nth-child(2)>img
 {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-between; 
   margin-top: 40px;
+  margin-left:50px;
+  margin-right:50px;
   flex-direction: row;
+  gap:30px;
 }
 
 .ccard{
@@ -320,11 +342,11 @@ display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
 flex-direction: column;
-flex:1;
+/* width:100%; */
 border: 1px solid #D9D9D9;
 border-radius: 7px;
 padding: 20px;
-margin: 0px 50px;
+
 }
 .ccard>p{
   color:#475270;
@@ -362,10 +384,8 @@ margin: 0px 50px;
 .customerdet>h4
 {
   text-align: center;
-
   font-size: 16px;
   font-weight: bold;
-
   color: black;
 }
 
@@ -374,7 +394,6 @@ margin: 0px 50px;
   text-align: left;
   margin-top: 0px;
   height: fit-content;
-
   font-size: 14px;
   color: #475270;
 }
@@ -386,18 +405,19 @@ margin: 0px 50px;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
   background-image: url(images/footer-bg.svg);
   height: 300px;
 }
 
 .leftsectionoce
 {
-  margin-left: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
-  flex:0.4;
+  flex:0.75;
 }
 
 .leftsectionoce>h3
@@ -405,7 +425,6 @@ margin: 0px 50px;
   color: white;
   font-size: 2em;
   width: fit-content;
-
 }
 
 .leftsectionoce>p
@@ -418,37 +437,35 @@ margin: 0px 50px;
 
 .quitoce>button
 {
- 
-  margin-right: 50px;
-  padding: 12px 30px;
+    padding: 12px 30px;
     font-size: 15px;
-    width: fit-content;
+    width:fit-content;
     height: fit-content;
     font-weight: 500;
-    margin-top: 135px;
+    margin-bottom: 20px;
     color: white;
-   background-color: transparent;
+    background-color: transparent;
     border: 1px solid white;
     border-radius: 5px;
-   
-    
+    align-self: center;
 }
 
 .footer{
-
-  padding-top: 100px;
+  padding-top: 75px;
   padding-bottom: 50px;
+  padding-left: 50px;
+  padding-right:50px;
+  gap:20px;
   background-color: white;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .logoclass
 {
   flex: 1.50;
-  margin-left: 50px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -477,7 +494,6 @@ margin: 0px 50px;
 .menu
 {
   flex: 0.8;
-
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -495,7 +511,6 @@ margin: 0px 50px;
 .media
 {
   flex: 1;
-
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -506,7 +521,6 @@ margin: 0px 50px;
 .media li
 {
   float: left;
- 
   margin-left: 10px;
 }
 
@@ -516,3 +530,92 @@ margin: 0px 50px;
   height: 25px;
 }
 
+@media  (max-width:639px) {
+      .quitoce
+      {
+        flex-direction: column;
+      }
+      .serviceproviderbox
+      {
+        width:100%;
+      }
+      .ccard
+      {
+        width:100%;
+      }
+      .serviceprovider>h2{
+        width:100%;
+        
+      }
+      .serviceprovider>p{
+        width:100%;
+      }
+     
+      .rightsection
+      {
+        display: none;
+      }
+      .pack
+      {
+        width:100%;
+      }
+      header>nav
+      {
+        flex:1;
+      }
+      header
+      {
+        flex-direction: column-reverse;
+        height: 150px;
+      }
+      header>div:nth-child(2)
+      { 
+        margin-top: 20px;
+      }
+    }
+   @media (min-width: 640px) {
+      
+      .pack
+      {
+        width:60%;
+      }
+      .serviceproviderbox
+      {
+        width:35%;
+      }
+      .ccard
+      {
+        width:39%;
+      }
+      .serviceprovider>h2{
+        width:45%;
+        
+      }
+      .serviceprovider>p{
+        width:45%;
+      }
+      header>nav
+      {
+        flex:2;
+      }
+   
+   }
+   
+   @media (min-width: 768px) {
+      .pack
+      {
+        width:38%;
+      }
+      .serviceproviderbox
+      {
+        width:24%;
+      }
+      
+   }
+
+   @media (min-width: 1024px) {
+    .pack
+    {
+      width:24.5%;
+    }
+   }
