--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ header>div:nth-child(2)>img
   padding: 15px 40px;
   font-size: 18px;
   font-weight: 500;
+  box-shadow: 0px 0px 5px #08ACF5;
 }
 
 .rightsection
@@ -230,8 +231,9 @@ header>div:nth-child(2)>img
 }
 .packs>div:nth-child(2)>div:nth-child(3)>button
 {
-  background-color: #056EEC;
+  background-color: #08ACF5;
   color: white;
+  box-shadow: 0px 0px 5px #08ACF5;
 }
 .pack>div:nth-child(2)
 {
@@ -240,6 +242,7 @@ header>div:nth-child(2)>img
 .pack>div:nth-child(3)>button
 {
   margin-bottom: 30px;
+  margin-top:15px;
 
 }
 .unselecteddiv>p{
